--- a/app-map-2/style.css
+++ b/app-map-2/style.css
@@ -25,6 +25,7 @@ body {
   --calcite-color-border-2: #cdd4d0;
   --calcite-color-border-3: #dfe8e3;
   --calcite-color-border-input: #727d77;
+  --calcite-color-focus: var(--calcite-brand-color);
 }
 
 body.calcite-mode-dark {
@@ -51,6 +52,7 @@ body.calcite-mode-dark {
   --calcite-color-border-2: #39473f;
   --calcite-color-border-3: #2b3d33;
   --calcite-color-border-input: rgb(80, 87, 83);
+  --calcite-color-focus: var(--calcite-brand-color);
 }
 
 /* Esri Developer & Technology Summit Demo Template */
